Deal with overloaded methods: Integrate signatures into method names. Parallelize tests. Differentiate declaration and definition locations